--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="home_content">
                 <h1>Shape Yourself</h1>
                 <p>Experience a transformative journey to a healthier, stronger version of yourself with FitnessPro.</p>
-                <a href="#exercise" class="home_btn"><button type="button">Get Started</button></a>
+                <a href="#exercise" class="home_btn" id="clickMe"><button type="button">Get Started</button></a>
             </div>
             <div class="home_img">
                 <img src="https://images.unsplash.com/photo-1571103189706-cd54b23e81f8?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzMyfHxmaXRuZXNzJTIwbG9nb3xlbnwwfHwwfHx8MA%3D%3D" alt="run">                
