--- a/index.html
+++ b/index.html
@@ -13,17 +13,18 @@
 </head>
 <body>
     <!-- Navigation bar -->
-    
-  <nav class="navbar">
-    <div class="navbar-container">
-      <div class="logo-container">
+<nav class="navbar navbar-default">
+    <div class="container">
+      <div class="navbar-header">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQUfzd6D3SGj-FHvT5cJdcudIDUROJAFbEa31p6PG6vzihh2-Zomw3FecGqzw&s" alt="FitnessPro Logo">
       </div>
-      <ul class="nav-links">
+      <div class="navbar-right">
+        <ul class="nav navbar-nav">
         <li class="#home"><a href="#">FitnessPro</a></li>
         <li class="#home"><a href="#">Home</a></li>
         <li><a href="#exercise">Exercises</a></li>
       </ul>
+    </div>
     </div>
   </nav>
     <!-- Landing Page -->
@@ -35,7 +36,7 @@
                 <a href="#exercise" class="home_btn" id="clickMe"><button type="button">Get Started</button></a>
             </div>
             <div class="home_img">
-                <img src="https://images.unsplash.com/photo-1571103189706-cd54b23e81f8?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzMyfHxmaXRuZXNzJTIwbG9nb3xlbnwwfHwwfHx8MA%3D%3D" alt="run">                
+                <img src="https://plus.unsplash.com/premium_photo-1672281090748-ae3bcd29c832?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTYwfHxmaXRuZXNzfGVufDB8fDB8fHww" alt="run">                
             </div>
         </div>
     </section>    
